// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VAlert.vue should be closed by default 1`] = `

<div role="alert"
     class="v-alert v-sheet theme--light"
     style="display: none;"
>
  <div>
  </div>
</div>

`;

exports[`VAlert.vue should be dismissible 1`] = `

<div role="alert"
     class="v-alert v-sheet theme--light"
     style="display: none;"
>
  <div>
  </div>
  <div class="v-alert__dismissible">
    <button type="button"
            class="v-btn v-btn--icon theme--light"
            aria-label="Close"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--light"
        >
          cancel
        </i>
      </div>
    </button>
  </div>
</div>

`;

exports[`VAlert.vue should have a close icon 1`] = `

<div role="alert"
     class="v-alert v-sheet theme--light"
     style="display: none;"
>
  <div>
  </div>
  <div class="v-alert__dismissible">
    <button type="button"
            class="v-btn v-btn--icon theme--light"
            aria-label="Close"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--light"
        >
          cancel
        </i>
      </div>
    </button>
  </div>
</div>

`;
